# cAR-gst-plugins

./: .gitmodules  Cargo.toml  README.md  build.Dockerfile  build.rs  k4a_wrapper.h
.devcontainer/: devcontainer.json
src/: frame.rs  lib.rs  libuvc_theta.rs  macros.rs
src/dcolorizer/: imp.rs  mod.rs
src/k4a/: imp.rs  libk4a.rs  mod.rs
src/theta/: imp.rs  libuvc_theta.rs  mod.rs
