[package]
name = "c_ar_gst_plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
gstreamer = "0.19.3"
gstreamer-base = "0.19.3"
gstreamer-video = "0.19.3"
libc = "0.2.138"
once_cell = "1.16.0"
strum = "0.24.1"
strum_macros = "0.24.3"

[build-dependencies]
cmake = "0.1.49"
bindgen = "0.63.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
[profile.release.package."*"] # +
opt-level = 3

[features]
default = ["theta"]
k4a = []
theta = []